Fixes and improvements

--- a/blog/2025-04-14-post.md
+++ b/blog/2025-04-14-post.md
@@ -5,13 +5,14 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description:
+### Description
 
 This update includes several important bug fixes that enhance performance, reduce battery consumption, and improve block behavior in the programming environment.
 
 <!-- truncate -->
+---
 
-### Changes:
+### Changes
 
 - **Fixed a bug causing high CPU usage, battery drain, and low performance.**
 - **Fixed a bug where gamepad blocks** (e.g., “is button pressed”, “is D-PAD button pressed”) **couldn’t be attached to other blocks.**
