--- a/blog/2025-04-19-post.md
+++ b/blog/2025-04-19-post.md
@@ -5,13 +5,14 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description:
+### Description
 
 This update introduces new joystick customization options, UI improvements, and important stability fixes.
 
 <!-- truncate -->
+---
 
-### Changes:
+### Changes
 
 - **Fixed a bug in the blocks palette collection selector**: selecting a collection, scrolling to another, and returning had no effect.
 - **Fixed a crash when loading heavy profiles** with a large number of blocks.
