--- a/blog/2025-05-10-post.md
+++ b/blog/2025-05-10-post.md
@@ -5,13 +5,14 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description:
+### Description
 
 This update improves support for tablets, adds useful testing pages, and fixes several compatibility and performance issues.
 
 <!-- truncate -->
+---
 
-### Changes:
+### Changes
 
 - **Added tablet layout** for better utilization of larger screens.
 - **Fixed a bug where the "hub button pressed" block** appeared for hubs that do not support this action. Also fixed inappropriate **color sensor blocks** for unsupported hubs (e.g., BuWizz).
