--- a/i18n/ru/docusaurus-plugin-content-blog/2025-04-14-post.md
+++ b/i18n/ru/docusaurus-plugin-content-blog/2025-04-14-post.md
@@ -5,13 +5,14 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Описание:
+### Описание
 
 Это обновление включает в себя несколько важных исправлений, которые повышают производительность, снижают энергопотребление и улучшают поведение блоков в среде программирования.
 
 <!-- truncate -->
+---
 
-### Изменения:
+### Изменения
 
 - **Исправлена ошибка, вызывавшая высокую загрузку ЦП, разряд аккумулятора и снижение производительности.**
 - **Исправлена ошибка, из-за которой игровые блоки** (например, «кнопка нажата», «нажата кнопка D-PAD») **не могли быть присоединены к другим блокам.**
