--- a/i18n/ru/docusaurus-plugin-content-blog/2025-04-19-post.md
+++ b/i18n/ru/docusaurus-plugin-content-blog/2025-04-19-post.md
@@ -5,13 +5,14 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Описание:
+### Описание
 
 Это обновление добавляет новые параметры настройки джойстика, улучшения пользовательского интерфейса и важные исправления для повышения стабильности.
 
 <!-- truncate -->
+---
 
-### Изменения:
+### Изменения
 
 - **Исправлена ошибка в селекторе коллекций палитры блоков**: при возврате к ранее выбранной коллекции изменения не отображались.
 - **Исправлен сбой при загрузке тяжёлых профилей**, содержащих большое количество блоков.
