--- a/i18n/ru/docusaurus-plugin-content-blog/2025-05-10-post.md
+++ b/i18n/ru/docusaurus-plugin-content-blog/2025-05-10-post.md
@@ -5,13 +5,14 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Описание:
+### Описание
 
 Это обновление улучшает поддержку планшетов, добавляет полезные страницы для тестирования и устраняет ряд проблем с совместимостью и производительностью.
 
 <!-- truncate -->
+---
 
-### Изменения:
+### Изменения
 
 - **Добавлен планшетный интерфейс** для более эффективного использования больших экранов.
 - **Исправлена ошибка с блоком “нажата кнопка хаба”**, который отображался для хабов, не поддерживающих это действие. Также удалены **блоки цветового датчика** для неподдерживаемых хабов (например, BuWizz).
