--- a/i18n/ru/docusaurus-plugin-content-blog/2025-05-17-post.md
+++ b/i18n/ru/docusaurus-plugin-content-blog/2025-05-17-post.md
@@ -5,13 +5,14 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Описание:
+### Описание
 
 Это обновление улучшает редактирование блоков, повышает производительность и обеспечивает корректную работу на новых версиях Android.
 
 <!-- truncate -->
+---
 
-### Изменения:
+### Изменения
 
 - **Исправлена ошибка сканирования хаба на устройствах с Android 12+** — теперь запрашивается разрешение на точное определение местоположения.
 - **Добавлена возможность скрывать/показывать палитру блоков**, нажатием на текущую выбранную коллекцию блоков.
