--- a/blog/2025-05-17-post.md
+++ b/blog/2025-05-17-post.md
@@ -5,13 +5,14 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description:
+### Description
 
 This update enhances the block editing experience, improves performance, and ensures proper functionality on newer Android versions.
 
 <!-- truncate -->
+---
 
-### Changes:
+### Changes
 
 - **Fixed a bug with hub scanning on Android 12+** by requesting precise location permission.
 - **Added option to hide/show the blocks palette** by clicking on the currently selected block collection.
